@@ -23,6 +23,7 @@
 	* Fixed bug #12604: fileNameASCIIPrefix got deprecated but is used in core (Thanks to Steffen Gebert)
 	* Fixed bug #11437: New labels in the log module are hardcoded (Thanks to Andy Grunwald)
 	* Fixed bug #14461: TCEforms: Use fieldsets for palettes instead of tables (Thanks to Jo Hasenau)
+	* Fixed bug #14505: treeView implementation fails in adding title-tags to sprite icons (Thanks to Steffen Ritter)
 
 2010-05-28  Christian Kuhn  <lolli@schwarzbu.ch>
 
